--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -155,3 +155,9 @@
     opacity: 0;
   }
 }
+
+html:has(.header__input:checked) body {
+  @media screen and (max-width: 767px) {
+    overflow: hidden;
+  }
+}
